test/classes/deitz/test_union_method3.good
x: (2.2)
x: (-1)
Hello
test_union_method3.chpl:8: error: halt reached - illegal union access
